--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -68,13 +68,13 @@
     &-title{
         margin-bottom: 10px;
         font-size: 48px;
-        font-weight: 700;
+        @include f700;
         line-height: 72px;
     }
     &-text{
         margin-bottom: 50px;
         font-size: 20px; 
-        font-weight: 500;
+        @include f500;
         line-height: 30px;
     }
     &-form{
@@ -89,12 +89,12 @@
             height: 56px;
             border: none;
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
             padding-left: 25px;
             padding-right: 60px; 
             &::placeholder{
                 color: #90a4ae;
-                font-weight: 500; 
+                @include f500; 
             }
         }
         button{
@@ -155,7 +155,7 @@
         padding: 10px 30px;
         min-height: 90px;
         align-items: center;
-        font-weight: 500;
+        @include f500;
         border-bottom: 1px solid #e7ecf2;
     }
     &-name{
@@ -173,7 +173,7 @@
     }
     &-price{
         font-size: 20px;
-        font-weight: 700;
+        @include f700;
         color: $bg;
     } 
     &-info{
@@ -199,7 +199,7 @@
         }
         span{
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
         }        
     }
     &-star{
@@ -256,10 +256,78 @@
         }
     }
 }
-
-
-
 // end products-slider
+// start advanteges
+.advanteges{
+    background-color: $bg;
+    padding: 110px 0;
+    
+}
+.advanteges__title{
+    color: #fff;
+}
+.advanteges__inner{
+    display: flex;
+    justify-content: space-between;
+}
+.advanteges__item{
+    max-width: 370px;
+    text-align: center;
+    padding: 0px 15px;
+    &:hover{
+        .advanteges__item-images{
+            background-color: $green;
+        }
+        .advanteges__item-title{
+           color: $green; 
+        }
+        .advanteges__item-images{
+            g{
+                fill: #fff;
+            }
+        }
+    }
+    &-images{
+        width: 114px;
+        height: 114px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto 30px;
+        transition: all .5s;
+
+    }
+    &-title{
+        margin-bottom: 25px;
+        font-size: 24px;
+        color: #fff;
+        @include f500;
+        transition: all .5s;
+
+    }
+    &-text{
+        font-size: 15px;
+    }
+}
+.icosvg-1{
+    svg{
+       
+    }
+}
+.icosvg-2{
+    svg{
+        
+    }
+}
+.icosvg-3{
+    svg{
+        
+    }
+}
+
+// end advanteges
 
 
   
