added product page right menu

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -55,6 +55,9 @@ body{
         padding: 0 15px;
     }
 }
+.page-content{
+    background-color: $grey;
+}
 .title{
     text-align: center;
     color: $bg;
