--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -197,7 +197,7 @@
         align-items: center;
         max-width: 245px;
         .avatar{
-            width: 30px;
+            min-width: 30px;
             height: 30px;
             border-radius: 50%;
             background-position: center;
@@ -537,3 +537,183 @@
     padding: 25px 0px;
 }
 //end footer
+
+
+
+// start product-page
+.product-page__inner{
+    display: flex;
+}
+.product-page__aside{
+    margin-right: 30px;
+}
+.aside__item{
+    background-color: #fff;
+    border: 1px solid #dcdcdc;
+    padding: 0px 32px 32px;
+    margin-bottom: 30px;
+    width: 270px;
+}
+.aside__title{
+    border-bottom: 1px solid #dde3e8;
+    font-size: 20px;
+    color: $bg;
+    @include f700;
+    padding: 22px 0px 19px;
+}
+.category__list{
+    padding-top: 10px;
+    li{
+        padding: 10px 0px;
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        padding-left: 20px;
+        
+        &::before{
+            content: '\f105';
+            font-family: 'icomoon';
+            color: #8bc34a;
+            position: absolute;
+            left: 0;
+            font-size: 18px;
+        }
+    }
+    a{
+        color: $bg;
+    }
+    span{
+        color: #90a4ae;
+        margin-left: 10px;
+    }
+}
+.price-range{
+    form{
+        padding-top: 20px;
+    }
+    button{
+        margin-top: 55px;
+        padding: 16px 10px;
+        background-color: $green;
+        text-align: center;
+        color: #fff;
+        @include f500;
+        width: 100%;
+        display: block;
+        border: none;
+        cursor: pointer;
+        position: relative;
+        &::before{
+            content: '\f002';
+            font-size: 15px;
+            font-family: 'icomoon';
+            color: #fff;
+            position: absolute;
+            top: 15px;
+            left: 58px;            
+        }
+    }
+}
+.irs-min,
+.irs-max{
+    display: none;
+}
+.irs--flat .irs-line {
+    height: 5px;
+    background-color: #f2f5f8;
+}
+.irs--flat .irs-bar{
+    background-color: #37474f;
+    height: 5px;
+}
+.irs--flat .irs-handle{
+    width: 16px;
+    height: 16px;
+    border: 4px solid $green;
+    border-radius: 50%;
+    background-color: #fff;
+}
+.irs--flat .irs-handle>i:first-child {
+    display: none;
+}
+.irs--flat .irs-handle {
+    top: 19px;
+}
+.irs-from,
+.irs-single,
+.irs-to {
+    top: 45px;
+}
+.irs--flat .irs-from:before,
+.irs--flat .irs-single:before,
+.irs--flat .irs-to:before{
+    display: none;
+}
+.irs--flat .irs-from,
+.irs--flat .irs-single,
+.irs--flat .irs-to {
+    color: #78909c;
+    font-size: 15px;
+    line-height: 1.333;
+    text-shadow: none;
+    padding: 0;
+    border-radius: 0px;
+    background-color: transparent;
+}
+.product-page__aside{
+    .product__item-img{
+        min-height: 120px;
+    }
+    .product__item{
+        box-shadow: none;
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+        border-bottom: 1px solid #dde3e8;
+        &-content{
+            padding: 0;
+            min-height: 75px;
+            border-bottom: none;
+        }
+        &-info{
+            padding: 0;
+            min-height: 0;
+        }
+        &-title{
+            font-size: 16px;
+        }
+        &-price{
+            font-size: 16px;
+        }
+        &-starnum{
+            display: none;
+        }
+        .rate-star{
+            margin-right: 0;
+        }
+        &-autor .avatar{
+            margin-right: 9px;
+        }
+        .jq-ry-container {
+            padding: 0;
+        }
+    }
+}
+.aside__product-item{
+    .product__item:last-child{
+        border-bottom: none;
+        padding-bottom: 0;
+    }
+    .product__item:first-child{
+        border-bottom: 1px solid #dde3e8;
+        margin-top: 25px;
+    }
+}
+.top-sellers__link{
+    padding: 16px 10px;
+    background-color: #8bc34a;
+    text-align: center;
+    color: #fff;
+    display: block;
+    @include f500;
+}
+// end product-page
