--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -543,6 +543,7 @@
 // start product-page
 .product-page__inner{
     display: flex;
+    padding-bottom: 110px;
 }
 .product-page__aside{
     margin-right: 30px;
@@ -716,4 +717,183 @@
     display: block;
     @include f500;
 }
+.product-page__filter{
+    background-color: #fff;
+    border: 1px solid #dcdcdc;
+    padding: 0px 20px;
+    margin-bottom: 30px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    button{
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        color: #90a4ae;
+        font-size: 16px;
+        color: #90a4ae;
+        outline: none;
+        &.active{
+            color: $green;
+        }
+    }
+}
+.product-page__filter-sort{
+    color: #707070;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+}
+button.icon-sort-amount-desc{
+    font-size: 14px;
+    color: #455a64;
+}
+button.icon-unsorted{
+    font-size: 18px;
+    color: #707070;
+}
+.product-page__content{
+    width: 100%;
+    .product__item{
+        max-width: 270px;
+        background-color: #fff;
+        box-shadow: 0px 16px 20px 0px rgba(216, 216, 216, 0.75);
+        transition: all .5s;
+        &-img{
+            min-height: 180px;
+        }
+        &-content{
+            padding: 10px 20px;
+        }
+        &-title{
+            font-size: 16px;
+        }
+        &-info{
+            min-height: 65px;
+            padding: 10px 20px;
+        }
+        .rate-star{
+            margin-right: 5px;
+        }
+        .jq-ry-container{
+            padding: 0;
+        }
+    }
+}
+.product-page__items{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
+}
+.pagination__list{
+    li{
+        display: inline-block;
+        
+        & + li{
+            margin-left: 6px;
+        }
+    }
+    a,
+    span{
+        box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+        width: 43px;
+        height: 38px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        font-size: 16px;
+        color: $bg;
+        @include f500;
+        &.active{
+            background-color: $red;
+            color: #fff;
+        }
+    }
+}
+.product__item-text{
+    display: none;
+}
+.product__item-price{
+    span{
+        display: none;
+    }
+}
+.product__item-list{
+    display: none;
+    .icon-comment-o,
+    .icon-heart-o{
+        display: inline-block;
+        font-size: 12px;
+        color: #b0bec5;
+        padding-left: 50px;
+        border-left: 1px solid #aeb4bb;
+        position: relative;
+        span{
+            @include f500;
+            color: $bg;
+        }
+        &::before{
+            font-size: 16px;
+            color: $green;
+            position: absolute;
+            left: 20px;
+            top: 0;
+        }
+    }
+    .icon-comment-o{
+        padding-right: 30px;
+        &::before{
+            top: -2px;
+        }
+    }    
+}
+.product__item{
+    &.list{
+        max-width: 100%;
+        .product__item-img{
+            width: 240px;
+            float: left;
+            min-height: 100%;
+        }
+        .product__item-text{
+            display: block;
+            font-size: 14px;
+            color: #70838d;
+            margin-top: 15px;
+            margin-bottom: 5px;
+        }
+        .product__item-price{
+            font-size: 30px;
+
+            span{
+                display: block;
+                font-size: 13px;
+                color: #aeb4bb;
+                margin-top: 30px;
+            }
+        }
+        .product__item-name{
+            max-width: 480px;
+        }
+        .product__item-content{
+            padding-top: 23px;
+        }
+        .product__item-list{
+            display: block;
+        }
+        .product__item-star{
+            margin-left: auto;
+            margin-right: 30px;
+        }
+        
+    }    
+    
+    
+}
 // end product-page
+
+
+  
