--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1161,6 +1161,7 @@ button.icon-unsorted{
     padding-bottom: 100px;
     &__inner{
         display: flex;
+        justify-content: space-between;
     }
     &__content{
         margin-right: 31px;
@@ -1251,6 +1252,9 @@ button.icon-unsorted{
             margin-bottom: 28px;
         }
     }
+}
+.product-one__inner{
+    display: flex;
 }
 .icon{
     &-facebook{
@@ -1353,7 +1357,148 @@ button.icon-unsorted{
         color: $bg;
     }
 }
-  
+.price__box{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0;
+}
+.price__product{
+    font-size: 22px;
+    @include f500;
+    color: $red;
+    
+}
+.product__price{
+    button{
+        margin-bottom: 7px;
+        box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+        border: none;
+        background-color: $text;
+        color: #fff;
+        font-size: 16px;
+        @include f700;
+        text-align: center;
+        display: block;
+        cursor: pointer;
+        padding: 17px 5px 15px;
+        width: 100%;
+        font-family: 'Roboto', sans-serif !important;
+        &::before{
+            font-weight: 400;
+            font-size: 18px;
+            font-family: 'icomoon';
+            padding-right: 8px;
+        }
+    }
+    .icon-shopping-cart{
+        background-color: $green;
+    }
+    .icon-heart-o{
+        background-color: #42a5f5;
+    }
+}
+.product-author__box{
+    padding: 25px 0;
+    display: flex;
+    // align-items: center;  
+}
+.author__avatar{
+    margin-right: 14px;
+    max-width: 73px;
+    height: 63px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.author__name{
+    font-size: 18px;
+    color: $bg;
+    margin-bottom: 2px;
 
+}
+.author__info-link{
+    color: #707070;
+    font-size: 13px;
+    padding: 6px 9px 5px;
+    border: 1px solid #d6d6d6;
+}
+.author__awards-list{
+    li{
+        display: inline-block;
+        color: #fff;
+        font-size: 20px;
+        text-align: center;
+        position: relative;
+        &::before{
+            position: absolute;
+            top: 6px;
+            left: 0;
+            right: 0;
+        }
+        & + li{
+            margin-left: 4px;
+        }
+    }
+    .icon-meh-o{
+        background-image: url(../images/awords/awords-orange.png);
+        width: 34px;
+        height: 37px;   
+    }
+    .icon-pagelines{
+        background-image: url(../images/awords/awords-red.png);
+        width: 34px;
+        height: 37px;
+    }
+    .icon-flash{
+        background-image: url(../images/awords/awords-blue.png);
+        width: 34px;
+        height: 37px;
+    }
+    .icon-foursquare{
+        background-image: url(../images/awords/awords-green.png);
+        width: 34px;
+        height: 37px;
+    }
+    .icon-yen{
+        background-image: url(../images/awords/awords-grey.png);
+        width: 34px;
+        height: 37px;
+    }
+}
+.aside__item-sales{
+    padding-top: 23px;
+    font-size: 16px;
+    @include f300;
+    color: #707070;
+    span{
+        font-size: 20px;
+        @include f700;
+        color: #263238;
+        padding-right: 13px;
+        &::before{
+            content: '\f07a';
+            font-family: 'icomoon';
+            font-size: 20px;
+            color: #a6b5bb;
+            padding-right: 20px;
+            font-weight: 400;
+        }
+    }
+}
+
+.aside__item.sales-namber{
+    padding-bottom: 25px;
+}
+.information__line{
+    font-size: 14px;
+    color: #70838d;
+    margin-top: 20px;
+    line-height: 18px;  
+    span{
+        color: $bg;
+        @include f500;
+    }
+}
 // end product-one
 @import 'media';
+  
