--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -315,6 +315,111 @@
     display: none;
 }
 // end header
+
+//start modal
+#modal{
+    background-color: $green;
+    max-width: 730px;
+    width: 100%;
+    padding-top: 90px;
+    padding-bottom: 100px;
+}
+.login__title{
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 48px;
+    padding-bottom: 40px;
+    @include f700;
+}
+.login__wrapper{
+    form{
+        max-width: 400px;
+        margin: 0 auto;
+    }
+    label{
+        position: relative;
+        display: block;
+        width: 100%;
+        &::before{
+            position: absolute;
+            font-family: 'icomoon';
+            color: #fff;
+            font-size: 14px;
+            left: 18px;
+            top: 9px;
+        }
+    }
+    .login__label-name::before{
+        content: '\f007';
+    }
+    .login__label-pass::before{
+        content: '\f023';
+    }
+    input{
+        height: 43px;
+        margin-bottom: 8px;
+        border: none;
+        background-color: #76ae36;
+        color: #fff;
+        font-size: 14px;
+        padding-left: 40px;
+        display: block;
+        width: 100%;
+        padding-right: 10px;
+        &::placeholder{
+            color: #fff;
+            font-size: 14px;
+            
+        }
+    }
+    button{
+        margin-top: 19px;
+        padding: 18px 0 16px;
+        color: #000;
+        background-color: #fff;
+        font-size: 18px;
+        width: 140px;
+        text-transform: uppercase;
+        border: none;
+        margin-right: 10px;
+        box-shadow: 0px 2px 2px 0px rgba(118, 174, 54, 0.75);
+        @include f700;
+        cursor: pointer;
+        text-align: center;
+    }
+    
+}
+.lost-pass{
+    display: block;
+    margin-top: 20px;
+    color: #fff;
+    font-size: 18px;
+}
+.creat-acc{
+    margin-top: 19px;
+    padding: 15px 0 15px 28px;
+    background-color: #76ae36;
+    color: #fff;
+    text-align: center;
+    width: 246px;
+    font-size: 18px;
+    position: relative;
+    &::before{
+        content: '\f044';
+        font-family: 'icomoon';
+        position: absolute;
+        font-size: 18px;
+        top: 15px;
+        left: 35px;
+    }
+}
+.fancybox-button svg path{
+    color: #fff;
+
+}
+//end modal
+
 // start search
 
 .search{    
@@ -1500,5 +1605,91 @@ button.icon-unsorted{
     }
 }
 // end product-one
+
+// start page-404
+.page-404,
+.about{
+    &__wrapper{
+        border: 1px solid #dcdcdc;
+        background-color: #fff;
+        margin-bottom: 150px;
+    }
+    &__head{
+        font-size: 24px;
+        color: #444;
+        padding: 23px 27px;
+        @include f500;
+        border-bottom: 1px solid #dcdcdc;
+    }
+    &__inner{
+        text-align: center;
+        background-color: $green;
+        color: #fff;
+    }
+    &__404{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 300px;
+        font-weight: 800;
+        padding-top: 70px;
+        padding-bottom: 20px;
+        line-height: 300px;
+        position: relative;
+        &:after{
+            content: '';
+            position: absolute;
+            background-image: url(../images/page-404.png);
+            width: 157px;
+            height: 301px;
+            margin-left: 20px;
+        }        
+    }
+    &__title{
+        margin-bottom: 30px;
+        @include f300;
+        font-size: 30px;
+        
+    }
+    &__text{
+        max-width: 501px;
+        font-size: 18px;
+        margin: 0 auto;
+        margin-bottom: 60px;
+    }
+    &__link{
+        color: #fff;
+        font-size: 14px;
+        text-transform: uppercase;
+        padding: 20px 30px 16px;
+        border: 1px solid #fff;
+        border-radius: 4px;
+        margin-bottom: 100px;
+    }
+}
+
+// end page-404
+
+// start about
+.about{
+    &__inner{
+        background-color: #fff;
+        padding: 0px 50px;
+        text-align: start;
+    }
+    &__box{
+        h3{
+            font-size: 20px;
+            color: #444;
+            @include f700;
+            margin-top: 40px;
+            margin-bottom: 15px;
+        }
+        p{
+            color: $text;
+            margin-bottom: 40px;
+        }
+    }
+}
+// end about
+
 @import 'media';
   
