--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1911,8 +1911,195 @@ button.icon-unsorted{
         }
     }
 }
-
-
-
 // end settings
-@import 'media';
+// start profile
+.profile{
+    &__inner{
+        display: flex;
+        margin-bottom: 30px;
+    }
+    &__aside{
+        margin-right: 30px;
+        max-width: 270px;
+        width: 100%;
+        & .footer__social-link{
+            margin-bottom: 30px;
+        }
+    }
+    &__content{
+        width: 100%;
+    }
+    &-status{
+        color: #707070;
+        font-size: 13px;
+        padding: 6px 9px 5px 30px;
+        border: 1px solid #d6d6d6;
+        position: relative;
+        &::before{
+            position: absolute;
+            content: '';
+            left: 13px;
+            top: 13px;
+            width: 9px;
+            height: 9px;
+            border-radius: 50%;
+        }
+    }
+    &-on{
+        &::before{
+            background-color: $green;
+        }
+    }
+    &-off{
+        &::before{
+            background-color: $red;
+        }
+    }
+    &__aside-btn{
+        margin-bottom: 13px;
+        text-align: center;
+    }
+    &__aside-message{
+        margin-bottom: 17px;
+        display: block;
+        width: 100%;
+        font-size: 16px;
+        color: #fff;
+        @include f500;
+        background-color: $text;
+        box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+        padding: 18px 10px; 
+        position: relative;
+        &::before{
+            content: "\f003";
+            position: absolute;
+            font-family: 'icomoon';
+            left: 55px;
+            top: 17px;
+        } 
+    }
+    &__aside-following{
+        margin-bottom: 17px;
+        display: block;
+        width: 100%;
+        font-size: 16px;
+        color: #fff;
+        @include f700;
+        background-color: $green;
+        box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+        padding: 18px 10px;
+    }
+    &__banner{
+        padding: 20px;
+        border: 1px solid #dedede;
+        background-color: #fff;
+        margin-bottom: 38px;
+        &-images{
+            min-height: 322px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+    }
+    &__items{
+        display: flex;
+        border: 1px solid #dedede;
+    }
+    &__item{
+        width: 25%;
+        background-color: #fff;
+        text-align: center;
+        padding: 20px 0px 17px;
+        
+        & + &{
+            border-left: 1px solid #dedede; 
+        }
+        &-title{
+            color: $bg;
+            font-size: 14px;
+            @include f500;
+        }
+        &-content{
+            color: #707070;
+            font-size: 14px;
+            @include f500;
+            &.profile__item-sales{
+                color: $bg;
+            }
+        }
+    }
+}
+.profile-setings{
+    .product-one__tabs.settings__tabs{
+        .tabs span{
+            font-family: 'Roboto-Regular', sans-serif !important;
+            font-weight: 500;
+            color: #707070;
+            position: relative;
+            border-bottom: none;
+            &.active{
+                border-bottom: 2px solid $green;
+            }
+            &.active::before{
+                color: $green;
+            }
+            &::before{
+                font-family: 'icomoon';
+                position: absolute;
+                color: #d0d0d0;
+                left: 27;
+                font-size: 14px;
+                top: 16px;
+            }
+        }
+    }
+}
+.personsl-box{
+    background-color: #fff;
+    padding: 35px 40px 25px;
+    border: 1px solid #dedede;
+    &__title{
+        font-size: 20px;
+        color: $bg;
+        @include f700;
+        margin-bottom: 25px;
+    }
+    &__text{
+        margin-bottom: 40px;
+        p{
+            margin-bottom: 20px;
+        }
+    }
+    &__item{
+        &-head{
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 16px;
+        }
+        &-name{
+            font-size: 16px;
+            @include f500;
+            color: $bg;
+            font-style: italic;
+        }
+        &-number{
+            font-size: 16px;
+            @include f700;
+            color: $bg;
+        }
+        &-line{
+            height: 15px;
+            background-color: #f4f4f4;
+            border-radius: 3px;
+            margin-bottom: 23px;
+            span{
+                display: block;
+                border-radius: 3px;
+                height: 15px;
+                background-color: $green;
+            }
+        }
+    }
+}
+// end profile
+@import 'media';  
