--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1908,6 +1908,7 @@ button.icon-unsorted{
             background-color: $green;
             border: none;
             padding: 15px 30px;
+            cursor: pointer;
         }
     }
 }
@@ -2102,4 +2103,144 @@ button.icon-unsorted{
     }
 }
 // end profile
+// start upload
+.upload{
+    &__inner{
+        background-color: #fff;
+        border: 1px solid #d7d7d7;
+        margin-bottom: 110px;
+        &-title{
+            color: $bg;
+            font-size: 24px;
+            padding: 16px 35px 18px;
+            @include f500;
+            border-bottom: 1px solid #d7d7d7;
+            margin-bottom: 40px;
+        }
+        &-content{
+            margin-bottom: 30px;
+            padding-left: 45px;
+            padding-right: 50px;
+        }
+        button{
+            color: #fff;
+            background-color: $green;
+            border: none;
+            padding: 15px 36px;
+            margin-left: 175px;
+            cursor: pointer;
+        }
+    }
+    &-line{
+        margin-bottom: 25px;
+        display: flex;
+
+        label{
+            min-width: 175px;
+            padding-right: 15px;
+            color: #444;
+            padding-top: 5px;
+            span{
+                color: $green;
+            }
+            &::placeholder{
+                color: #707070;
+            }
+        }
+        select,
+        input,
+        textarea{
+            width: 100%;
+            display: block;
+            border: 1px solid #d7d7d7;
+            background-color: #f9f9f9;
+            height: 40px;
+            padding: 0px 18px;
+        }
+        textarea{
+            padding-top: 8px;
+            resize: none;
+            height: 150px;
+        }
+        input[type="file"]{
+            outline: none;
+        }
+        .jq-file {
+            width: 100%;
+            border-radius: 0px;
+            box-shadow: none;
+            border: 1px solid #d7d7d7;
+            background-color: #f9f9f9;
+            height: 40px;
+        }
+        .jq-file__name {
+            box-sizing: border-box;
+            width: 100%;
+            height: 40px;
+            padding: 0 18px;
+            border: none;
+            border-bottom-color: transparent;
+            border-radius: 0px;
+            background: transparent;
+            box-shadow: none;
+            line-height: 40px;
+            color: #707070;
+            font-size: 12px;
+            margin-left: 90px;
+        }
+        .jq-file__browse {
+            top: 5px;
+            right: auto;
+            left: 9px;
+            padding: 0px 12px;
+            border-left: 1px solid #d7d7d7;
+            border: 1px solid #d7d7d7;
+            border-radius: 0;
+            background: #FFF;
+            box-shadow:  none;
+            text-shadow: none;
+            font-size: 12px;
+            line-height: 26px;
+            color: #444;
+            cursor: pointer;
+            
+        }
+        .jq-selectbox{
+            width: 100%;
+        }
+        .jq-selectbox__select {
+            height: 40px;
+            padding: 0 18px;
+            border: 1px solid #d7d7d7;
+            border-bottom-color: #d7d7d7;
+            border-radius: 0px;
+            background: #f9f9f9;
+            box-shadow: none;
+            font-family: 'Roboto-Regular', sans-serif;
+            color: #707070;
+            text-shadow: none;
+            line-height: 40px;
+        }
+        .jq-selectbox__trigger-arrow {
+            border: none;
+            font-size: 15px;
+            line-height: 40px;
+            top: 0;
+            right: 20px;
+            &::before{
+                content: '\f0d7';
+                font-family: 'icomoon';
+                color: #707070;
+                
+            }
+        }
+        .jq-selectbox__trigger{
+            border-left: none;
+        }
+        
+    }
+    
+    
+}
+// end upload
 @import 'media';  
