--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,4 +1,90 @@
+@media (max-width: 1900px){
+    .product-slider__inner{
+        text-align: center;
+    }
+    .product__item-category{
+        text-align: left;
+    }
+}
+@media (max-width: 1440px){
+    .product-slider__inner{
+        .product__item{
+            max-width: 560px;
+        }
+    }
+}
+
+
+@media (max-width: 1400px){
+    .products .product__item {
+        flex-basis: calc(33.33333% - 30px); 
+    }
+}
+@media (max-width: 1225px){
+    .product-slider__inner{
+        .product__item{
+            max-width: 350px;
+        }
+    }
+}
+@media (max-width: 1200px){
+    .withdrawals__inner{
+        display: block;
+    }
+    .withdrawals__col{
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+    .withdrawals__content-item{
+        max-width: 490px;
+    }
+    .contact__form-row{
+        display: block;
+        input{
+            width: 100%;
+        }
+    }
+    .productmini{
+        max-width: 48%;
+    }
+    .product-one__content{
+        margin-right: 0px;
+    }
+    .product-one__inner{
+        display: block;
+        .aside__item{
+            width: 100%;
+        }
+    }
+    .product-one__content,
+    .product-one__images{
+        max-width: 100%;
+    }
+    .product-page__inner {
+        display: block;
+        .product-page__aside{
+            margin-right: 0;
+        }
+        .aside__item{
+            width: 100%;
+        }
+    }
+    .top-sellers{
+        display: none;
+    }
+    .tutorial__item{
+        padding: 0 5px;
+    }
+    
+}
 @media (max-width: 1150px){
+    .products .product__item {
+        flex-basis: calc(50% - 30px);
+        max-width: 100%;
+    }
+    .product__item-img{
+        min-height: 225px;
+    }
     .footer__inner{
         flex-wrap: wrap;
     }
@@ -11,8 +97,59 @@
     .header__text{
         display: none;
     }
+    .product-one__tabs.settings__tabs{
+        display: block;
+    }
+    .product-one__tabs.settings__tabs .tabs{
+        margin-bottom: 20px;
+        max-width: 100%;
+    }
+    .tutorial__inner{
+        flex-wrap: wrap;
+        margin-left: -20px;
+
+    }
+    .tutorial__item{
+        padding: 0;
+        margin-left: 20px;
+        max-width: 100%;
+        flex-basis: calc(50% - 20px);
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 960px){
+    .page-404__404:after{
+        width: 50px;
+        height: 97px;
+        background-size: cover;
+    }
 }
 @media (max-width: 900px){
+    .author{
+        min-height: 450px;
+    }
+    .advanteges__inner{
+        display: block;
+    }
+    .advanteges__item{
+        margin-bottom: 30px;
+        max-width: 100%;
+    }
+    .search__inner-title{
+        line-height: 40px;
+        font-size: 35px;
+    }
+    .product-page__content .product__item {
+        flex-basis: calc(50% - 20px);
+        margin-left: 20px;
+        margin-bottom: 20px;
+    }
+    .product-page__items{
+        margin-left: -20px;
+    }
+    .product__item.list{
+        flex-basis: 100%;
+    }
     .footer__inner{
         justify-content: flex-start;
     }
@@ -24,6 +161,32 @@
         & + &{
             margin-left: 40px;
         }
+    }
+    .settings__line-btn{
+        margin-left: 0;
+    }
+    .contact__box{
+        display: block;
+    }
+    .profile__inner{
+        flex-direction: column;
+    }
+    .profile__content{
+        order: -1;
+        margin-bottom: 20px;
+    }
+    .profile__aside{
+        max-width: 100%;
+    }
+    .aside__item{
+        width: 100%;        
+    }
+    .profile__aside-btn{
+        width: 400px;
+        margin: 0 auto;
+    }
+    .profile__aside .footer__social-link{
+        margin: 0 auto;
     }
 }
 @media (max-width: 840px){
@@ -64,8 +227,81 @@
             }
         }
     }
+    .upload-line{
+        display: block;
+        label{
+            display: inline-block;
+            margin-bottom: 5px;
+        }
+    }
+    .upload__inner button{
+        margin-left: 0;
+    }
 }
+@media (max-width: 790px){
+    .product-slider__inner{
+        .product__item{
+            max-width: 100%;
+        }
+    }
+    .icon-th-list{
+        display: none;
+    }
+    .product-one__box{
+        display: block;
+    }
+    .product-one__link{
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 740px){
+    .page-404__404{
+        font-size: 200px;
+        line-height: 200px;
+    }
+    .page-404__title{
+        font-size: 24px;
+        margin-bottom: 20px;
+        line-height: 30px;
+    }
+    .page-404__text{
+        font-size: 15px;
+        margin-bottom: 40px;
+    }
+    .page-404__link{
+        padding: 10px 30px 8px;
+    }
+}
+
+@media (max-width: 700px){
+    .products .product__item {
+        flex-basis: 100%;
+        max-width: 100%;
+    }
+    .author__box {
+        padding: 50px 15px;
+        display: block;
+        text-align: center;
+
+    }
+    .author__title{
+        margin-right: auto;
+        margin-bottom: 20px;
+        margin-left: auto;
+    }
+}
+
 @media (max-width: 640px){
+    .product-page__content .product__item {
+        flex-basis: 100%;
+        max-width: 100%;
+    }
+    .products__inner-btn button {
+        width: 100%;
+        & + button{
+            margin-left: 0;
+        }
+    }
     .notification__box,
     .message__box{
         display: none;
@@ -73,7 +309,122 @@
     .circle__menu{
         right: auto;
     }
+    .profile__banner-images{
+        min-height: 245px;
+    }
+    .profile__items{
+        display: block;
+        
+    }
+    .profile__item{
+        width: 100%;
+    }
+    .profile__item+.profile__item{
+        border-left: none;
+        border-top: 1px solid #dedede;
+    }
+    .profile__banner{
+        margin-bottom: 20px;
+    }
+    .personsl-box {
+        padding: 35px 10px 25px;
+    }
+    .profile__aside-btn {
+        width: 280px;
+        margin: 0 auto;
+    }
+    .productmini{
+        max-width: 100%;
+    }
+    .tutorial__item{
+        flex-basis: 100%;
+    }
+    .creat-acc{
+        width: 100%;
+    }
+    .login__wrapper button {
+        margin-right: 0;
+        width: 100%;
+    }
 }
+@media (max-width: 600px){
+    .page-404__inner{
+        padding: 0 15px;
+    }
+    .page-404__404{
+        font-size: 120px;
+        line-height: 120px;
+    }
+    .page-404__404:after{
+        content: '';
+        margin-left: 0px;
+        text-outline: 16px;
+        right: 0;
+    }
+    .upload__inner-content{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .upload__inner-title{
+        padding: 16px 10px 18px;
+    }
+    .settings__line{
+        display: block;
+        label{
+            display: inline-block;
+            margin-bottom: 5px;
+        }
+    }
+    .page-box__content{
+        padding: 20px 10px 50px;
+    }
+    .page-box__title {
+        padding: 18px 10px;
+    }
+    .contact__inner{
+        padding: 35px 10px 15px;
+    }
+    .contact__head {
+        padding-right: 10px;
+        padding-left: 10px;
+    }
+    .contact__map iframe{
+        height: 300px;
+    }
+    .profile__aside-btn{
+        width: 280px;
+    }
+    .product-one__tabs{
+        .tabs{
+            display: block;
+            .tab{
+                display: block;
+                border-top: none;
+                border-left: 1px solid #d7d7d7;
+                &:first-child{
+                    border-top: 1px solid #d7d7d7;
+                }
+            }
+        }
+    }
+    .tab-items__list {
+        column-count: 1;
+        column-gap: 0px;
+    }    
+    .product-one__link{
+        a{           
+            margin-bottom: 15px;
+            width: 100%;
+            & + a{
+                margin-left: 0;
+            }
+        }
+    }
+    .product-one__images{
+        height: 300px;
+    }
+}
+
 @media (max-width: 540px){
     .footer__col{
         min-width: 100%;
@@ -84,11 +435,25 @@
             margin-top: 30px;
         }
     }
+    .withdrawals__content{
+        padding: 0px 10px 0px 10px;
+    }
+    .withdrawals__content-items{
+        overflow-x: scroll;
+    }
+    .withdrawals__content-item{
+        min-width: 490px;
+    }
 }
 @media (max-width: 520px){
-    //.header{
-    //    overflow: hidden;
-    //}
+    .product-slider .slick-dots li button {
+        width: 13px;
+        height: 13px;
+    }
+    .product-slider .slick-dots li {
+        margin-left: 2px;
+        margin-right: 2px;
+    }
     .header__btn-menu{
         display: block;
     }
@@ -152,8 +517,17 @@
     .user__images{
         margin-right: 0;
     }
+    .about__head{
+        padding: 23px 10px;
+    }
+    .about__inner{
+        padding: 0 10px;
+    }
 }
 @media (max-width: 390px){
+    .fancybox-content{
+        padding: 44px 10px;
+    }
     .header__box{
         &.activ{
             left: 47px;
@@ -164,6 +538,9 @@
     }
     .menu__btn{
         left: 10px;
+    }
+    .page-404__404:after{
+        display: none;
     }
 }
 @media (max-width: 360px){
