--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -487,7 +487,12 @@
 // start products
 .products{
     padding: 110px 0px;
-    background-color: $grey;
+    background-color: $grey;   
+}
+.products__wrapper,
+.product-slider__wrapper{
+    max-width: 1920px;
+    margin: 0 auto;
 }
 .products__inner-btn{
     text-align: center;
@@ -510,12 +515,18 @@
 }
 .products__inner-box{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    margin-left: -30px;
     flex-wrap: wrap;
+}
+.products .product__item{
+    flex-basis: calc(25% - 30px);
+    margin-left: 30px;
 }
 .product__item{
     max-width: 442px;
     width: 100%;
+
     box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
     margin-bottom: 30px;
     &-img{
@@ -1123,10 +1134,11 @@ button.icon-unsorted{
 .product-page__content{
     width: 100%;
     .product__item{
-        max-width: 270px;
+        flex-basis: calc(33.3333% - 30px);
         background-color: #fff;
         box-shadow: 0px 16px 20px 0px rgba(216, 216, 216, 0.75);
         transition: all .5s;
+        margin-left: 30px;
         &-img{
             min-height: 180px;
         }
@@ -1150,9 +1162,10 @@ button.icon-unsorted{
 }
 .product-page__items{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-bottom: 30px;
     flex-wrap: wrap;
+    margin-left: -30px;
 }
 .pagination__list{
     li{
@@ -1220,6 +1233,7 @@ button.icon-unsorted{
 .product__item{
     &.list{
         max-width: 100%;
+        flex-basis: 100%;
         .product__item-img{
             width: 240px;
             float: left;
@@ -1278,7 +1292,7 @@ button.icon-unsorted{
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 16px 0;
+        padding: 16px;
     }
     &__images{
         max-width: 829px;
@@ -1622,6 +1636,9 @@ button.icon-unsorted{
         @include f500;
         border-bottom: 1px solid #dcdcdc;
     }
+    
+}
+.page-404{
     &__inner{
         text-align: center;
         background-color: $green;
@@ -1900,7 +1917,43 @@ button.icon-unsorted{
         color: $text;
         padding: 0px 10px;
         color: #707070;
+        
     }
+    .jq-selectbox{
+        max-width: 540px;
+        width: 100%;
+    }
+    .jq-selectbox__select {
+        height: 40px;
+        padding: 0 18px;
+        border: 1px solid #d7d7d7;
+        border-bottom-color: #d7d7d7;
+        border-radius: 0px;
+        background: #f9f9f9;
+        box-shadow: none;
+        font-family: 'Roboto-Regular', sans-serif;
+        color: #707070;
+        text-shadow: none;
+        line-height: 40px;
+    }
+    .jq-selectbox__trigger-arrow {
+        border: none;
+        font-size: 15px;
+        line-height: 40px;
+        top: 0;
+        right: 20px;
+        &::before{
+            content: '\f0d7';
+            font-family: 'icomoon';
+            color: #707070;
+            
+        }
+    }
+    .jq-selectbox__trigger{
+        border-left: none;
+    }
+   
+
     &-btn{
         margin-left: 258px;
         button{
@@ -1909,6 +1962,7 @@ button.icon-unsorted{
             border: none;
             padding: 15px 30px;
             cursor: pointer;
+            display: block;
         }
     }
 }
@@ -2143,9 +2197,6 @@ button.icon-unsorted{
             span{
                 color: $green;
             }
-            &::placeholder{
-                color: #707070;
-            }
         }
         select,
         input,
@@ -2156,6 +2207,9 @@ button.icon-unsorted{
             background-color: #f9f9f9;
             height: 40px;
             padding: 0px 18px;
+            &::placeholder{
+                color: #707070;
+            }
         }
         textarea{
             padding-top: 8px;
@@ -2243,4 +2297,138 @@ button.icon-unsorted{
     
 }
 // end upload
+// start withdrawals
+.withdrawals{
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 110px;
+    }
+    &__col{
+        max-width: 570px;
+        width: 100%;
+        background-color: #fff;
+        border: 1px solid #dedede;
+        height: 100%;
+    }
+    &__title{
+        color: $bg;
+        padding: 18px 32px 24px;
+        border-bottom: 1px solid #dedede;
+        font-size: 24px;
+        margin-bottom: 30px;
+        @include f500;
+    }
+    &__content{
+        padding: 0px 40px 0px 35px;
+        button{
+            color: #fff;
+            background-color: $green;
+            border: none;
+            padding: 15px 36px;
+            cursor: pointer;
+            margin-bottom: 50px;
+        }
+        &-items{
+            padding-bottom: 35px;
+        }
+        &-item{
+            display: flex;
+            height: 42px;
+            align-items: center;
+            font-size: 13px;
+            color: #444;
+            &:nth-child(odd){
+                background-color: #f9f9f9;
+            }            
+        }
+        &-date{
+            width: 154px;
+            padding-left: 20px;
+            @include f500;
+        }
+        &-email{
+            width: 180px;
+            @include f500;
+        }
+        &-price{
+            width: 70px;
+            @include f700;
+        }
+        &-status{
+            width: 88px;
+            @include f700;
+            &.withdrawals__content-status-paid{
+                color: $green;
+            }
+
+        }
+
+    }
+    &__form{
+        &-line{
+            margin-bottom: 25px;
+            label{
+                display: block;
+                width: 100%;
+                font-size: 16px;
+                @include f500;
+                color: $bg;
+                margin-bottom: 15px;
+                span{
+                    color: $green;
+                }
+            }
+            input,
+            select{
+                width: 100%;
+                display: block;
+                border: 1px solid #d7d7d7;
+                background-color: #f9f9f9;
+                height: 40px;
+                padding: 0px 18px;
+                &::placeholder{
+                    color: #707070;
+                }
+            }
+            .jq-selectbox{
+                width: 100%;
+            }
+            .jq-selectbox__select {
+                height: 40px;
+                padding: 0 18px;
+                border: 1px solid #d7d7d7;
+                border-bottom-color: #d7d7d7;
+                border-radius: 0px;
+                background: #f9f9f9;
+                box-shadow: none;
+                font-family: 'Roboto-Regular', sans-serif;
+                color: #707070;
+                text-shadow: none;
+                line-height: 40px;
+            }
+            .jq-selectbox__trigger-arrow {
+                border: none;
+                font-size: 15px;
+                line-height: 40px;
+                top: 0;
+                right: 20px;
+                &::before{
+                    content: '\f0d7';
+                    font-family: 'icomoon';
+                    color: #707070;
+                    
+                }
+            }
+            .jq-selectbox__trigger{
+                border-left: none;
+            }
+            
+        }
+       
+    }
+}
+// end withdrawals
+
+
 @import 'media';  
